<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_text"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:src="@drawable/shaivam_logo" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/_16sdp" />

        <Button
            android:id="@+id/enable_keyboard"
            android:layout_width="wrap_content"
            android:text="@string/text_enable_visai"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp" />


        <LinearLayout
            android:id="@+id/helpWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/_16sdp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help_step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_help_step_1"/>

            <TextView
                android:id="@+id/help_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_help_step_2"
                android:padding="@dimen/_8sdp"
                />

            <TextView
                android:id="@+id/help_step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_help_step_3"
                android:padding="@dimen/_8sdp"
                />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>