<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Yellow"
        android:gravity="center">

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_white">


            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/appversion"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_version"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/slide_2_desc"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_15sdp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/slide_3_desc"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_15sdp"
                android:typeface="serif" />
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>