<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tilte_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/bg_white"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.FontPath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilte_text">

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/change_font_size"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp" />
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_white"
            android:text="@string/OK"
            android:layout_marginTop="@dimen/_16sdp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:background="@drawable/button_border"
            android:textSize="@dimen/_14sdp"/>   </LinearLayout>



</android.support.constraint.ConstraintLayout>